# circutis

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  rlc_series.asc
asclib/: README.md  __init__.py  alignment.py  components.py  pyproject.toml  routing.py
circutis/: README.md  __init__.py  alignment.py  circuit.py  components.py  constants.py  pin.py  pyproject.toml  routing.py  validation.py
examples/: dual_opamp_cascade.asc  dual_opamp_cascade.py  dual_opamp_cascade_unbeautified.asc  noninverting_amplifier.py  noninverting_amplifier_unbeautified.asc  rlc_bandpass.asc  rlc_bandpass.py  rlc_circuit.py  rlc_series.asc  second_order_circuit.asc  second_order_circuit.py  second_order_circuit_unbeautified.asc
