[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circutis"
version = "0.1.0"
description = "Python library for generating LTspice ASC schematic files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ltspice", "spice", "circuit", "schematic", "electronics", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Documentation = "https://github.com/erayyap/circutis#readme"
Repository = "https://github.com/erayyap/circutis"

[tool.setuptools.packages.find]
include = ["circutis*"]
